# EluETL

./: .gitignore  LICENSE  README.md  angular.json  elu-etl-dsl-v0.2重構規格.md  package-lock.json  package.json  tsconfig.app.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
docs/: development-plan.md
src/: index.html  styles.css
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: database.rs  etl.rs  excel.rs  mod.rs
src-tauri/src/db/: db2.rs  driver.rs  mod.rs  mssql.rs  mysql.rs  pool.rs  postgres.rs  sqlite.rs
src-tauri/src/etl/: executor.rs  mapping.rs  mod.rs  source_input.rs  transform.rs
src-tauri/src/etl/script/: ast.rs  executor.rs  gen.rs  mod.rs  parser.rs
src-tauri/src/excel/: csv_reader.rs  mod.rs  reader.rs  schema_infer.rs  source.rs  writer.rs
src-tauri/src/models/: connection.rs  errors.rs  mod.rs  schema.rs  value.rs
src-tauri/src/security/: keychain.rs  mod.rs  secrets.rs
src-tauri/src/state/: store.rs
src-tauri/src/telemetry/: mod.rs
src-tauri/tests/: script_etl.rs  sqlite_etl.rs
src/app/: app.component.html  app.component.ts  app.routes.ts
src/app/pages/connections/: connections.page.html  connections.page.ts
src/app/pages/execute/: execute.page.html  execute.page.ts
src/app/pages/import/: import.page.html  import.page.ts
src/app/pages/mapping/: mapping.page.html  mapping.page.ts
src/app/pages/script/: script.page.html  script.page.ts
src/app/pages/works/: works.page.html  works.page.ts
src/app/services/: etl-state.service.ts  log.service.ts  output.service.ts  tauri.service.ts  workspace.service.ts
